# -*- Makefile -*-

nobase_include_HEADERS = \
	netlink/fib_lookup/lookup.h \
	netlink/fib_lookup/request.h \
	netlink/genl/ctrl.h \
	netlink/genl/family.h \
	netlink/genl/genl.h \
	netlink/genl/mngt.h \
	netlink/netfilter/ct.h \
	netlink/netfilter/log.h \
	netlink/netfilter/log_msg.h \
	netlink/netfilter/netfilter.h \
	netlink/netfilter/nfnl.h \
	netlink/netfilter/queue.h \
	netlink/netfilter/queue_msg.h \
	netlink/addr.h \
	netlink/attr.h \
	netlink/cache-api.h \
	netlink/cache.h \
	netlink/data.h \
	netlink/errno.h \
	netlink/handlers.h \
	netlink/list.h \
	netlink/msg.h \
	netlink/netlink-compat.h \
	netlink/netlink-kernel.h \
	netlink/netlink.h \
	netlink/object-api.h \
	netlink/object.h \
	netlink/route/cls/fw.h \
	netlink/route/cls/police.h \
	netlink/route/cls/u32.h \
	netlink/route/link/info-api.h \
	netlink/route/link/vlan.h \
	netlink/route/qdisc/cbq.h \
	netlink/route/qdisc/dsmark.h \
	netlink/route/qdisc/fifo.h \
	netlink/route/qdisc/htb.h \
	netlink/route/qdisc/netem.h \
	netlink/route/qdisc/prio.h \
	netlink/route/qdisc/red.h \
	netlink/route/qdisc/sfq.h \
	netlink/route/qdisc/tbf.h \
	netlink/route/addr.h \
	netlink/route/class.h \
	netlink/route/classifier.h \
	netlink/route/link.h \
	netlink/route/neighbour.h \
	netlink/route/neightbl.h \
	netlink/route/nexthop.h \
	netlink/route/qdisc.h \
	netlink/route/route.h \
	netlink/route/rtnl.h \
	netlink/route/rule.h \
	netlink/route/tc.h \
	netlink/route/tc-api.h \
	netlink/socket.h \
	netlink/types.h \
	netlink/utils.h \
	netlink/version.h
